2009-08-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm (TGIF_set_color): Support for RGB colors and TC_LT.

2009-08-13  anonymous 

	* term/tek.trm: Add support for xterm tektronix emulation

2009-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: The combination of iteration and in-line definition was
	fatal to splot.  Move the iteration check to encompass definitions also.
	Bug #2833808

2009-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): The calculation of vertical space required
	to hold rotated x axis tick labels was only being done if the margins
	were in auto mode.  Rearrange the code so that the calculation is also
	made for plots with explicit 'set [tb]margin'.
	Bug #2830712

2009-08-04  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Expand section on newhistogram command.

2009-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/save.c src/graphics.c src/term_api.h docs/gnuplot.doc
	docs/plotstyles.gnu:  Add new linestyle property 'pointinterval'.
	This is a modified version of patchset #2653943 contributed by
	Hans (oe6jwf@users.sourceforge.net).

	* src/axis.c src/axis.h src/color.c src/graphics.c src/graph3d.c:
	Add an additional parameter to all tick_callback() routines. In the case
	of auto-generated ticks, we use this to pass in a list of user-specified
	labels in case one is supposed to replace the auto-generated label.
	The actual label replacement is only implemented for 2D plots.

2009-07-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Handle xticlabels() in the case of
	histograms with errorbars.  Bugfix

2009-07-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/gadgets.h src/gadgets.c
	src/graphics.c (boundary):  Add a field color_box.xoffset to allow the
	colorbox to be shifted left or right from the default placement.